# aoc2020

./: .clang-format  AOC_Computer.hpp  CMakeLists.txt  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  exec.hpp  main.hpp  template.in
