cmake_minimum_required(VERSION 3.17)
project(aoc_2020)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(day_1 day_1.cpp)
add_executable(day_2 day_2.cpp)

function(aoc_day_solution day_id)
    file(TOUCH  ${day_id}.in)
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${day_id}.cpp")
    else()
        configure_file(template.in ${CMAKE_CURRENT_SOURCE_DIR}/${day_id}.cpp COPYONLY)
    endif()
    add_executable(${day_id} ${day_id}.cpp)
    target_compile_definitions(${day_id} PUBLIC -DDAY_PATH="../${day_id}.in")
endfunction()

aoc_day_solution(day_3)
aoc_day_solution(day_4)
aoc_day_solution(day_5)
aoc_day_solution(day_6)
aoc_day_solution(day_7)
aoc_day_solution(day_8)
aoc_day_solution(day_9)
aoc_day_solution(day_10)
aoc_day_solution(day_11)
aoc_day_solution(day_12)
aoc_day_solution(day_13)
aoc_day_solution(day_14)
aoc_day_solution(day_15)
aoc_day_solution(day_16)
aoc_day_solution(day_17)
aoc_day_solution(day_18)
aoc_day_solution(day_19)
aoc_day_solution(day_20)
aoc_day_solution(day_21)
aoc_day_solution(day_22)
aoc_day_solution(day_23)
aoc_day_solution(day_24)
aoc_day_solution(day_25)